# DiskANN-rs

./: .gitignore  Cargo.toml
.cargo/: config.toml
DiskANN/: Cargo.toml
DiskANN/src/algorithm/prune/: prune.rs
DiskANN/src/algorithm/search/: search.rs
DiskANN/src/common/: aligned_allocator.rs  ann_result.rs  mod.rs
DiskANN/src/index/: mod.rs
DiskANN/src/index/disk_index/: ann_disk_index.rs  disk_index.rs
DiskANN/src/index/inmem_index/: ann_inmem_index.rs  inmem_index.rs  inmem_index_storage.rs
DiskANN/src/model/aligned_file_reader/: aligned_file_reader.rs  mod.rs
DiskANN/src/model/data_store/: inmem_dataset.rs
DiskANN/src/model/graph/: disk_graph.rs  inmem_graph.rs  sector_graph.rs
DiskANN/src/model/neighbor/: neighbor.rs  neighbor_priority_queue.rs  sorted_neighbor_vector.rs
DiskANN/src/model/pq/: fixed_chunk_pq_table.rs  pq_construction.rs
DiskANN/src/model/scratch/: concurrent_queue.rs  inmem_query_scratch.rs  pq_scratch.rs  scratch_store_manager.rs  ssd_io_context.rs  ssd_query_scratch.rs  ssd_thread_data.rs
DiskANN/src/platform/: linux.rs
DiskANN/src/storage/: disk_graph_storage.rs  disk_index_storage.rs  pq_storage.rs
DiskANN/src/test_utils/: inmem_index_initialization.rs
DiskANN/src/utils/: cached_reader.rs  cached_writer.rs  file_util.rs  kmeans.rs  math_util.rs  partition.rs  timer.rs  utils.rs
EvolveANN/: Cargo.toml
EvolveANN/benches/: distance_bench.rs  kmeans_bench.rs  neighbor_bench.rs
EvolveANN/src/: lib.rs
EvolveANN/src/algorithm/search/: search.rs
EvolveANN/src/index/disk_index/: ann_disk_index.rs  disk_index.rs
EvolveANN/src/index/inmem_index/: ann_inmem_index.rs  inmem_index.rs  inmem_index_storage.rs
EvolveANN/src/model/: mod.rs
EvolveANN/src/model/aligned_file_reader/: aligned_file_reader.rs
EvolveANN/src/model/data_store/: disk_scratch_dataset.rs  inmem_dataset.rs
EvolveANN/src/model/graph/: inmem_graph.rs
EvolveANN/src/model/pq/: fixed_chunk_pq_table.rs  pq_construction.rs
EvolveANN/src/model/scratch/: inmem_query_scratch.rs  mod.rs  ssd_thread_data.rs
EvolveANN/src/platform/: linux.rs
EvolveANN/src/storage/: disk_index_storage.rs  pq_storage.rs
EvolveANN/src/test_utils/: inmem_index_initialization.rs
EvolveANN/src/utils/: cached_reader.rs  rayon_util.rs  timer.rs  utils.rs
cmd_drivers/build_and_insert_delete_memory_index/: Cargo.toml
cmd_drivers/build_and_insert_memory_index/: Cargo.toml
cmd_drivers/build_and_insert_memory_index/src/: main.rs
cmd_drivers/build_disk_index/: Cargo.toml
cmd_drivers/build_memory_index/: Cargo.toml
cmd_drivers/convert_f32_to_bf16/: Cargo.toml
cmd_drivers/convert_f32_to_bf16/src/: main.rs
cmd_drivers/load_and_insert_memory_index/: Cargo.toml
cmd_drivers/load_and_insert_memory_index/src/: main.rs
cmd_drivers/search_memory_index/: Cargo.toml
cmd_drivers/search_memory_index/src/: main.rs
vector/: Cargo.toml  build.rs
vector/src/: distance.rs  half.rs  l2_float_distance.rs  lib.rs
