# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT license.
[package]
name = "diskann"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
bit-vec = "0.6.3"
byteorder = "1.4.3"
cblas = "0.5.0"
crossbeam = "0.8.2"
half = { workspace = true }
hashbrown = "0.13.2"
libc = "0.2"
num-traits = "0.2.15"
once_cell = "1.17.1"
rand = { workspace = true, features = [ "small_rng" ] }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
io-uring = "0.7"
vector = { workspace = true }

[build-dependencies]
cc = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = "0.5.1"


[[bench]]
name = "distance_bench"
harness = false

[[bench]]
name = "neighbor_bench"
harness = false