# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT license.
[package]
edition = "2024"
license = "MIT"
name = "diskann"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bit-vec = "0.6.3"
byteorder = "1.4.3"
cblas = "0.5.0"
crossbeam = "0.8.2"
half = "2.2.1"
hashbrown = "0.13.2"
io-uring = "0.7"
libc = "0.2"
num-traits = "0.2.15"
once_cell = "1.17.1"
rand = { version = "0.9", features = ["small_rng"] }
rayon = "1.7.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = { version = "2.0.12" }

vector = { path = "../vector", version = "0.1.0" }

[build-dependencies]
cc = "1.0.79"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"

[[bench]]
harness = false
name = "distance_bench"

[[bench]]
harness = false
name = "neighbor_bench"
