# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT license.
[package]
name = "vector"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = { workspace = true }
thiserror = "1.0.40"
bytemuck = "1.7.0"

[build-dependencies]
cc = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
base64 = "0.21.2"
bincode = { workspace = true }
serde = { workspace = true }
rand = "0.8.5"

